--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -5,39 +5,8 @@ html {
     font-size: 16px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: "Montserrat";
-}
-
-h1,
-h2 {
-    font-weight: 300;
-}
-
-h1 {
-    font-size: 3em;
-}
-h2 {
-    font-size: 2.25em;
-}
-
-h3,
-h4 {
-    font-weight: 500;
-}
-
-h3 {
-    font-size: 1.25em;
-}
-h4 {
-    font-size: 0.75em;
-}
-
+p > a,
+span > a,
 a {
     color: $color_link;
     text-decoration: none;
@@ -49,14 +18,77 @@ a {
     }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Montserrat";
+
+    color: $color_black;
+}
+
+h1,
+h2 {
+    font-weight: 300;
+}
+
+h1 {
+    font-size: 3rem;
+
+    &.title {
+        margin-top: 1rem;
+    }
+}
+h2 {
+    font-size: 2.25rem;
+}
+
+h3,
+h4 {
+    font-weight: 500;
+
+    color: $color_grey_dark;
+}
+
+h3 {
+    font-size: 1.25rem;
+}
+h4 {
+    font-size: 0.75rem;
+}
+
+small {
+    font-size: 0.75rem;
+
+    text-transform: uppercase;
+
+    color: $color_grey_dark;
+}
+
+b,
+strong {
+    font-weight: 700;
+
+    color: $color_black;
+}
+
+i,
+em {
+    font-style: italic;
+
+    color: $color_black;
+}
+
 nav {
     ul {
         li {
             display: inline-block;
 
             a {
-                margin: 0 0.5em;
-                padding: 1em 0.5em;
+                margin: 0 0.5rem;
+                padding: 1rem 0.5rem;
 
                 color: $color_black;
 
@@ -68,17 +100,57 @@ nav {
     }
 }
 
-.link-button {
-    display: inline-block;
-    padding: 0.75em 1em;
-    border-radius: 0.5em;
+button {
+    padding: 1rem 1.5rem;
+    border: none;
 
-    background: $color_indywalls_primary;
+    background: $color_grey_dark;
 
+    font-weight: 700;
+    text-transform: uppercase;
     color: $color_white;
 
+    transition: $transition_time_link;
+
     &:hover {
-        background: $color_indywalls_primary_light;
-        color: $color_white;
+        background: $color_grey_dark_light;
+    }
+
+    &.button-primary {
+        background: $color_indywalls_primary;
+
+        &:hover {
+            background: $color_indywalls_primary_light;
+        }
+    }
+}
+
+.page-container {
+    max-width: $max-width_content;
+    margin: 0 auto;
+}
+
+.lower-content-container {
+    margin-top: 1rem;
+}
+
+body {
+    height: 100vh;
+    overflow: hidden;
+}
+#root {
+    & > .App {
+        display: grid;
+        grid-template-rows: repeat(2, minmax(min-content, 1fr));
+
+        height: 100vh;
+        overflow-y: scroll;
+
+        & > header {
+            grid-row: 1 / 2;
+        }
+        & > div {
+            grid-row: 2 / 3;
+        }
     }
 }
