--- a/elyreacts/src/components/Header.module.scss
+++ b/elyreacts/src/components/Header.module.scss
@@ -1,170 +1,75 @@
 @import "../variables.scss";
 
-.headerWrapper {
-    background: $color_white;
-}
+.headerWrapper__headerOpen {
+    bottom: 0;
+    left: 0;
 
-@media only screen and (min-width: $media_width_tablet) {
-    .headerContainer {
+    .headerLinkContainer {
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        box-sizing: border-box;
-
-        max-width: $max-width_content;
-
-        margin: 0 auto;
-        padding: 1em 2em;
-
-        img {
-            height: 2em;
-        }
     }
 
     .headerMenuIcon {
-        display: none;
-    }
+        & > div {
+            width: 50%;
+            margin-left: 50%;
 
-    .headerLinkContainer {
-        position: static;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: flex-end;
-
-        & > nav ul {
-            display: inline-block;
-            margin-right: 1.5em;
-
-            li {
-                display: inline-block;
-
-                a {
-                    margin: 0 0.5em;
-                    padding: 1em 0.5em;
-
-                    color: $color_black;
-
-                    &:hover {
-                        color: $color_indywalls_primary;
-                    }
-                }
-            }
-        }
-
-        & > .accountPanel {
-            & > div {
-                display: inline-block;
-
-                margin: 0 0.5em;
-            }
-
-            .accountRegister {
-                position: relative;
-
-                .accountRegister__dropdown {
-                    display: none;
-
-                    position: absolute;
-                    z-index: 998;
-                    top: 100%;
-                    left: 50%;
-                    transform: translateX(-50%);
-
-                    overflow: hidden;
-
-                    // height: 0;
-                    width: max-content;
-
-                    padding: 2.5em 1em 0.5em 1em;
-
-                    & > span {
-                        position: absolute;
-                        z-index: 998;
-                        top: 1.75em;
-                        left: 50%;
-                        transform: translateX(-50%);
-
-                        color: $color_grey_dark;
-
-                        font-size: 0.75em;
-                        text-transform: uppercase;
-                    }
-                    & > a {
-                        position: relative;
-                        z-index: 998;
-                    }
-
-                    &::after {
-                        content: "";
-                        position: absolute;
-                        z-index: 997;
-                        top: 0.75em;
-                        left: 0;
-                        right: 0;
-                        bottom: 0;
-
-                        border-radius: 0.5em;
-
-                        background: $color_black;
-                    }
-
-                    &::before {
-                        // Arrow above dropdown
-                        content: "";
-                        pointer-events: none;
-                        position: absolute;
-                        z-index: 996;
-                        top: -0.75em;
-                        left: 50%;
-                        margin-left: -0.75em;
-
-                        border: 0.75em solid transparent;
-                        border-bottom: 0.75em solid $color_black;
-
-                        height: 0;
-                        width: 0;
-                    }
-                }
-
-                // Show dropdown on hover of ANY of the above elements
-                &:hover > .accountRegister__dropdown {
-                    display: block;
-                    // height: max-content;
-                    // opacity: 1;
-                }
-                & > .accountRegister__dropdown:hover {
-                    display: block;
-                }
+            &:nth-of-type(2) {
+                width: 100%;
+                margin-left: 0;
             }
         }
     }
 }
 
+.headerWrapper {
+    position: sticky;
+    z-index: 9999;
+    top: 0;
+
+    height: min-content;
+    width: 100%;
+
+    background: $color_white;
+
+    border-bottom: 2px solid $color_indywalls_primary;
+
+    transition: $transition_time_link;
+}
+
 .headerContainer {
+    position: relative;
+
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
     box-sizing: border-box;
 
-    max-width: $max-width_content;
+    height: 100%;
+    width: 100%;
 
     margin: 0 auto;
-    padding: 1em 2em;
+    padding: 2em;
 
     img {
         height: 2em;
+        width: 3em;
     }
 }
 
 .headerMenuIcon {
+    position: absolute;
+    top: 1.75em;
+    right: 1.5em;
+
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 0.5em;
 
     width: 1.5em;
+
+    padding: 1em;
 
     & > div {
         height: 0.2em;
@@ -191,61 +96,219 @@
             margin-left: 50%;
         }
     }
+
+    &:hover + .headerLinkContainer,
+    & + .headerLinkContainer:hover {
+        display: flex;
+    }
 }
+// todo:
+/*
+    on above's active pseudo, display:
+    absolutely-positioned fullscreen element
+        on hover: headerLinkContainer appears
+    close button active pseudo displays new element which overlays others and removes hover pseudo
+*/
 
 .headerLinkContainer {
-    position: absolute;
-    top: 4em;
-    right: 0;
-    bottom: 0;
-    left: 0;
-
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
 
-    padding: 2em;
+    height: 100%;
+    width: 100%;
 
-    background: $color_white;
+    margin-top: 1em;
 
+    & > nav {
+        overflow: hidden;
+
+        width: 100%;
+    }
     & > nav ul {
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
         align-items: flex-start;
+        justify-content: flex-start;
 
         li {
-            margin: 0.25em 0;
-            padding: 1em 2em 1em 0;
+            width: 100%;
+
+            a {
+                display: inline-block;
+
+                width: 100%;
+
+                margin: 0.5em 0;
+                padding: 1em 1em 1em 0;
+            }
         }
     }
 
     & > .accountPanel {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        align-items: center;
-        justify-items: center;
+        align-items: stretch;
+        justify-items: stretch;
 
         width: 100%;
 
-        & > div {
+        & > * {
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-
-            margin: 0 0.5em;
         }
 
-        .accountRegister {
-            & > .accountRegister__dropdown {
-                margin-top: 0.5em;
+        & > .accountRegister .accountRegister__dropdown {
+            padding-top: 0.5em;
 
-                & > span {
-                    padding-right: 0.25em;
-                }
+            & > span {
+                padding-right: 0.25em;
             }
+        }
+    }
+}
+
+@media only screen and (min-width: $media_width_tablet) {
+    .headerMenuIcon {
+        display: none;
+    }
+
+    .headerContainer {
+        flex-direction: row;
+
+        margin: 0 auto;
+        padding: 1em;
+
+        max-width: $max-width_content;
+
+        img {
+            margin: 1em 0;
+        }
+    }
+
+    .headerLinkContainer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+
+        margin: 0;
+
+        & > nav {
+            width: max-content;
+            margin: 0 1.5em 0 0;
+        }
+
+        & > nav ul {
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+
+            li {
+                width: max-content;
+            }
+        }
+
+        & > .accountPanel {
+            width: max-content;
+
+            align-items: stretch;
+            justify-items: stretch;
+        }
+    }
+
+    /* Account - Register button - dropdown */
+    .accountRegister {
+        position: relative;
+
+        .accountRegister__dropdown {
+            display: none;
+            // visibility: hidden;
+
+            position: absolute;
+            z-index: 998;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            overflow: hidden;
+
+            width: max-content;
+
+            padding: 2.5em 1em 0.5em 1em;
+
+            // opacity: 0;
+
+            // transition: opacity $transition_time_link;
+
+            & > span {
+                position: absolute;
+                z-index: 998;
+                top: 1.75em;
+                left: 50%;
+                transform: translateX(-50%);
+
+                color: $color_grey_dark;
+
+                font-size: 0.75em;
+                text-transform: uppercase;
+            }
+            & > a {
+                display: inline-block;
+
+                position: relative;
+                z-index: 998;
+
+                margin-top: 1.75em;
+            }
+
+            // Dropdown background
+            &::after {
+                content: "";
+                position: absolute;
+                z-index: 997;
+                top: 0.75em;
+                left: 0;
+                right: 0;
+                bottom: 0;
+
+                border-radius: 0.5em;
+
+                background: $color_black;
+            }
+
+            // Arrow above dropdown
+            &::before {
+                content: "";
+                pointer-events: none;
+                position: absolute;
+                z-index: 996;
+                top: -0.75em;
+                left: 50%;
+                margin-left: -0.75em;
+
+                border: 0.75em solid transparent;
+                border-bottom: 0.75em solid $color_black;
+
+                height: 0;
+                width: 0;
+            }
+        }
+
+        // Show dropdown on hover of ANY of the above elements
+        &:hover > .accountRegister__dropdown {
+            display: block;
+            // visibility: visible;
+
+            // opacity: 1;
+        }
+        & > .accountRegister__dropdown:hover {
+            display: block;
+            // visibility: visible;
+
+            // opacity: 1;
         }
     }
 }
