--- a/elyreacts/src/variables.scss
+++ b/elyreacts/src/variables.scss
@@ -1,6 +1,7 @@
 $color_white: #fafafa;
 $color_black: #1a1d22;
-$color_grey_dark: #6a6e72;
+$color_grey_dark: #606468;
+$color_grey_dark_light: #7e7f80;
 $color_grey_light: #a2a3a7;
 
 $color_indywalls_primary: #33c758;
@@ -12,6 +13,8 @@ $color_link: $color_indywalls_primary;
 $color_link_hover: $color_grey_dark;
 
 $transition_time_link: 0.12s;
+$transition_time_anim: 0.2s;
+$transition_time_anim_long: 0.68s;
 
 // BREAKPOINTS
 $media_width_tablet: 740px;
