--- a/elyreacts/src/components/Poster.module.scss
+++ b/elyreacts/src/components/Poster.module.scss
@@ -1,6 +1,6 @@
 @import "../variables.scss";
 
-a.posterContainer {
+.posterContainer {
     display: grid;
     grid-template-rows: repeat(2, minmax(min-content, max-content));
 
@@ -9,7 +9,7 @@ a.posterContainer {
     height: min-content;
 
     &:hover .posterPreview {
-        img {
+        & > a > img {
             filter: brightness(85%);
         }
         .posterCTA {
@@ -24,7 +24,7 @@ a.posterContainer {
 
         overflow: hidden;
 
-        img {
+        & > a > img {
             width: 100%;
             height: 100%;
             object-fit: cover;
