--- a/elyreacts/src/components/styles/PostersWall.module.scss
+++ b/elyreacts/src/components/styles/PostersWall.module.scss
@@ -1,5 +1,9 @@
 @import "../../variables.scss";
 
-.categoryContainer {
-    background: grey;
+.categoryWrapper {
+    margin: 0 auto;
+}
+
+.postersList {
+    margin-top: 1.5em;
 }
