--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -5,6 +5,10 @@ html {
     font-size: 16px;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 p > a,
 span > a,
 a {
@@ -37,7 +41,7 @@ h2 {
 h1 {
     font-size: 3rem;
 
-    &.title {
+    &.page-title {
         margin-top: 1rem;
 
         text-align: center;
@@ -91,6 +95,94 @@ em {
     font-style: italic;
 
     color: $color_black;
+}
+
+// Has child <ul>
+.tiled-list-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+    & > span {
+        padding: 0.5rem 1.5rem;
+        border: 0.15rem solid $color_grey_dark;
+        border-radius: 0.5rem;
+
+        // Match <small /> text style
+        font-size: 0.75rem;
+        text-transform: uppercase;
+        color: $color_grey_dark;
+
+        transition: $transition_time_link;
+    }
+
+    & > ul {
+        overflow: hidden;
+
+        max-height: 0;
+        margin-top: 0.5rem;
+
+        transition: $transition_time_anim;
+    }
+
+    // todo: always show on displays larger than tablet width!
+    &:hover {
+        & > span {
+            // padding: 0.25rem 1.5rem; // todo: fix page jump
+
+            color: $color_white;
+            background: $color_grey_dark;
+        }
+
+        & > ul {
+            max-height: 32em;
+        }
+    }
+}
+
+ul {
+    &.style-none {
+        list-style-type: none;
+
+        li {
+            display: inline-block;
+        }
+    }
+
+    &.tiled-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+
+        li {
+            display: inline-block;
+
+            margin: 0.5rem;
+
+            & > * {
+                display: inline-block;
+
+                margin: 0;
+                padding: 1em 1.5em;
+                border: 0.15rem solid $color_indywalls_primary;
+                border-radius: 0.75em;
+
+                text-transform: uppercase;
+                font-size: 0.8rem;
+
+                transition: $transition_time_link;
+            }
+
+            & > *:hover,
+            &.active > * {
+                color: $color_white;
+                background: $color_indywalls_primary;
+            }
+        }
+    }
 }
 
 nav {
@@ -148,13 +240,40 @@ input {
     width: 100%;
     max-width: $max-width_content;
 
-    // background: #000;
+    padding: 0 1em;
 
     margin: 0 auto;
 }
 
+.page-header {
+    position: relative;
+
+    width: max-content;
+
+    margin: 2.5em auto 0 auto;
+    padding: 0 1em 1em 1em;
+
+    & > p {
+        margin-top: 1.5em;
+        text-align: center;
+
+        text-transform: uppercase;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 37.5%;
+        width: 25%;
+        height: 0.15rem;
+
+        background: $color_indywalls_primary;
+    }
+}
+
 .lower-content-container {
-    margin-top: 1rem;
+    margin-top: 2.5rem;
 }
 
 body {
