--- a/elyreacts/src/components/styles/Poster.module.scss
+++ b/elyreacts/src/components/styles/Poster.module.scss
@@ -1,81 +1,71 @@
 @import "../../variables.scss";
 
-.posterContainer {
+.container {
     display: grid;
     grid-template-rows: repeat(2, minmax(min-content, max-content));
 
-    width: 24rem;
+    max-width: 24rem;
     min-height: 12rem;
     height: min-content;
 
-    &:hover .posterPreview {
+    &:hover .previewContainer {
         & > a > img {
-            filter: brightness(85%);
-        }
-        .posterCTA {
-            bottom: 0;
-
-            opacity: 1;
+            filter: brightness(75%);
         }
     }
+}
 
-    .posterPreview {
-        position: relative;
+.previewContainer {
+    position: relative;
 
-        overflow: hidden;
+    overflow: hidden;
 
-        & > a > img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            margin: 0;
-            padding: 0;
-            border: 0;
-
-            transition: $transition_time_anim_long;
-        }
-
-        .posterCTA {
-            position: absolute;
-            bottom: -100%;
-            left: 0;
-
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-
-            width: 100%;
-
-            transition: $transition_time_anim;
-        }
-    }
-
-    .posterInfoContainer {
+    & > a > img {
         width: 100%;
-        box-sizing: border-box;
+        height: 100%;
+        object-fit: cover;
+        margin: 0;
+        padding: 0;
+        border: 0;
 
-        padding: 1em;
+        transition: $transition_time_anim_long;
+    }
 
-        .simple {
-            display: grid;
-            grid-template-columns: auto minmax(0, max-content);
-            grid-template-rows: repeat(2, max-content);
+    .buttons {
+        position: absolute;
+        top: 0;
+        right: 0;
 
-            & > h2 {
-                grid-area: 1 / 1 / 2 / 2;
-            }
-            & > small {
-                grid-area: 2 / 1 / 3 / 2;
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        grid-gap: 0.5rem;
 
-                margin-top: 0.5em;
-            }
-            & > strong.price {
-                grid-area: 1 / 2 / 3 / 3;
-                align-self: center;
-            }
-        }
+        margin: 1rem;
 
-        .extended_hidden {
-            display: none;
-        }
+        transition: $transition_time_anim;
+    }
+}
+
+.caption {
+    display: grid;
+    grid-template-columns: auto minmax(0, max-content);
+    grid-template-rows: repeat(2, max-content);
+
+    width: 100%;
+    box-sizing: border-box;
+
+    padding: 1em;
+
+    & > h2 {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+    & > small {
+        grid-area: 2 / 1 / 3 / 2;
+
+        margin-top: 0.5em;
+    }
+    & > strong.price {
+        grid-area: 1 / 2 / 3 / 3;
+        align-self: center;
     }
 }
