--- a/elyreacts/src/components/styles/Register.module.scss
+++ b/elyreacts/src/components/styles/Register.module.scss
@@ -1,6 +1,6 @@
 @import "../../variables.scss";
 
-.artistRegFormContainer {
+.registrationFormContainer {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,24 +10,14 @@
     margin: 1rem 0;
 }
 
-.artistRegForm {
+.registrationForm {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    > div > input {
-        border: none;
-        border-left: 0.15rem solid $color_grey_dark;
-        box-sizing: border-box;
-
-        margin: 0.25rem 0 0 0;
-
-        width: 16rem;
-    }
-
-    > button {
-        margin: 1.25rem 0 0 0;
+    & > button {
+        margin: 1.5rem 0 0 0;
         width: 16rem;
     }
 }
