--- a/elyreacts/src/variables.scss
+++ b/elyreacts/src/variables.scss
@@ -3,6 +3,8 @@ $color_black: #1a1d22;
 $color_grey_dark: #606468;
 $color_grey_dark_light: #7e7f80;
 $color_grey_light: #a2a3a7;
+$color_success: #4ad45d;
+$color_fail: #d8544f;
 
 $color_indywalls_primary: #33c758;
 $color_indywalls_primary_light: #56d877;
