fix: Button font-family now inherited

--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -213,6 +213,7 @@ button {
 
     background: $color_grey_dark;
 
+    font-family: inherit;
     font-weight: 700;
     text-transform: uppercase;
     color: $color_white;
