--- a/elyreacts/src/components/styles/FormInput.module.scss
+++ b/elyreacts/src/components/styles/FormInput.module.scss
@@ -99,7 +99,9 @@
             }
 
             & > input {
-                display: none;
+                // Hide original radio button
+                position: absolute;
+                opacity: 0;
 
                 &:checked + label {
                     font-weight: bolder;
@@ -108,6 +110,107 @@
                     background: $color_indywalls_primary;
                 }
             }
+        }
+    }
+}
+
+.checkboxContainer {
+    margin-top: 0.5rem;
+
+    width: 100%;
+
+    & > label {
+        display: inline-block;
+        position: relative;
+
+        padding: 0.25rem 0 0.25rem 2rem;
+
+        font-size: 1rem;
+        text-transform: uppercase;
+
+        color: $color_grey_dark;
+
+        &::before {
+            content: "";
+
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 0;
+
+            height: 1.25rem;
+            width: 1.25rem;
+
+            background: $color_grey_dark;
+
+            transition: $transition_time_link;
+        }
+    }
+
+    & > input {
+        // Hide original checkbox
+        position: absolute;
+        opacity: 0;
+
+        &:checked + label {
+            &::before {
+                background: $color_indywalls_primary;
+            }
+        }
+    }
+}
+
+.dropdownContainer {
+    position: relative;
+
+    margin-top: 0.5rem;
+
+    width: 100%;
+
+    & > label {
+        position: absolute;
+        top: 0.25rem;
+        left: 0;
+
+        pointer-events: none;
+
+        font-size: 1rem;
+        text-transform: uppercase;
+
+        color: $color_grey_dark;
+
+        transition: $transition_time_link;
+    }
+
+    & > select {
+        position: relative;
+        display: inline-block;
+
+        box-shadow: none;
+
+        width: 16rem; // todo: make all widths 100% to fill containing element
+
+        border: none;
+        border-left: 0.15rem solid $color_grey_dark;
+        box-sizing: border-box;
+
+        margin: 1.5rem 0 0 0;
+
+        background: $color_white;
+        border: 0.15rem solid $color_grey_dark;
+        // line-height: 1.5em; // todo: line-height on EVERYTHING
+
+        transition: $transition_time_anim;
+
+        &:valid {
+            border-color: $color_success;
+        }
+        &:invalid {
+            border-color: $color_fail;
+        }
+        &:focus,
+        &[value=""]:not(:invalid) {
+            border-color: $color_grey_dark;
         }
     }
 }
