--- a/elyreacts/src/components/styles/LinkButton.module.scss
+++ b/elyreacts/src/components/styles/LinkButton.module.scss
@@ -2,15 +2,27 @@
 
 .linkButton {
     display: inline-block;
-    padding: 0.75em 1em;
-    border-radius: 0.5em;
+    padding: 0.75rem 1rem;
 
-    background: $color_indywalls_primary;
+    background: $color_grey_dark;
 
     color: $color_white;
 
+    transition: $transition_time_link;
+
     &:hover {
-        background: $color_indywalls_primary_light;
+        background: $color_grey_dark_light;
+
         color: $color_white;
+    }
+
+    &.primary {
+        background: $color_indywalls_primary;
+
+        &:hover {
+            background: $color_indywalls_primary_light;
+
+            color: $color_white;
+        }
     }
 }
