--- a/elyreacts/src/components/styles/Poster.module.scss
+++ b/elyreacts/src/components/styles/Poster.module.scss
@@ -4,8 +4,8 @@
     display: grid;
     grid-template-rows: repeat(2, minmax(min-content, max-content));
 
-    max-width: 24rem;
-    min-height: 12rem;
+    max-width: 20rem;
+    // max-height: 8rem;
     height: min-content;
 
     &:hover .previewContainer {
@@ -56,8 +56,9 @@
 
     padding: 1em;
 
-    & > h2 {
+    & > h3 {
         grid-area: 1 / 1 / 2 / 2;
+        text-transform: uppercase;
     }
     & > small {
         grid-area: 2 / 1 / 3 / 2;
@@ -67,5 +68,7 @@
     & > strong.price {
         grid-area: 1 / 2 / 3 / 3;
         align-self: center;
+
+        margin-left: 0.5rem;
     }
 }
