--- a/elyreacts/src/components/styles/Poster.module.scss
+++ b/elyreacts/src/components/styles/Poster.module.scss
@@ -4,6 +4,8 @@
     display: grid;
     grid-template-rows: repeat(2, minmax(min-content, max-content));
 
+    // todo: fix max-width and height defs for variable poster sizes
+    // match widths, not heights
     max-width: 20rem;
     // max-height: 8rem;
     height: min-content;
@@ -19,6 +21,14 @@
     position: relative;
 
     overflow: hidden;
+
+    & > a {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
 
     & > a > img {
         width: 100%;
@@ -48,25 +58,43 @@
 
 .caption {
     display: grid;
-    grid-template-columns: auto minmax(0, max-content);
+    grid-template-columns: minmax(0, max-content) auto minmax(0, max-content);
     grid-template-rows: repeat(2, max-content);
+
+    grid-template-areas:
+        "admires    title   price"
+        "admires    author  price";
 
     width: 100%;
     box-sizing: border-box;
 
-    padding: 1em;
+    padding: 1em 0.5rem;
 
     & > h3 {
-        grid-area: 1 / 1 / 2 / 2;
+        grid-area: title;
         text-transform: uppercase;
     }
     & > small {
-        grid-area: 2 / 1 / 3 / 2;
+        grid-area: author;
 
         margin-top: 0.5em;
     }
+    & > .admiresContainer {
+        grid-area: admires;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        margin-right: 0.5rem;
+
+        & > strong {
+            margin-top: 0.25rem;
+        }
+    }
     & > strong.price {
-        grid-area: 1 / 2 / 3 / 3;
+        grid-area: price;
         align-self: center;
 
         margin-left: 0.5rem;
