--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -359,7 +359,7 @@ option {
     }
 }
 
-.featured-container {
+.collection-container {
     display: grid;
     grid-auto-rows: minmax(min-content, max-content);
     grid-gap: 1rem;
