--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -176,7 +176,7 @@ ul {
                 margin: 0;
                 padding: 1em 1.5em;
                 border: 0.15rem solid $color_indywalls_primary;
-                border-radius: 0.75em;
+                border-radius: 0;
 
                 text-transform: uppercase;
                 font-size: 0.8rem;
