--- a/elyreacts/src/components/styles/PostersList.module.scss
+++ b/elyreacts/src/components/styles/PostersList.module.scss
@@ -1,14 +1,19 @@
+@import "../../variables.scss";
+
 .postersListContainer {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    justify-content: center;
-
-    height: 100%;
     width: 100%;
 
-    & > * {
-        margin: 0.5em;
+    & > .postersList {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: center;
+
+        margin: 0 auto;
+
+        & > * {
+            max-width: 20rem;
+            margin: 0.5rem;
+        }
     }
 }
