--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -371,3 +371,73 @@ option {
         padding: 1rem 2.5rem;
     }
 }
+
+.hero-container {
+    display: grid;
+    grid-template-rows: repeat(2, minmax(min-content, max-content));
+    grid-gap: 2rem;
+
+    width: 100%;
+    max-width: $max-width_content;
+
+    margin-top: 2.5rem;
+    padding: 0rem 2rem;
+
+    border: 0.2rem solid $color_indywalls_primary;
+    border-top: none;
+    border-bottom: none;
+
+    // Grid areas
+    & > img {
+        grid-row: 1 / 1 / 2 / 2;
+
+        display: inline-block;
+
+        max-height: 16rem;
+        width: 100%;
+
+        object-fit: cover;
+    }
+    & > div {
+        grid-area: 2 / 1 / 3 / 2;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        height: 100%;
+
+        & > h2 {
+            color: $color_indywalls_primary;
+        }
+
+        & > p {
+            margin: 0.5rem 0 0 0;
+        }
+
+        & > a {
+            margin: 2.5rem 0 0 0;
+        }
+    }
+}
+
+@media only screen and (min-width: $media_width_tablet) {
+    .hero-container {
+        grid-template-columns: 1fr 1fr;
+
+        // Grid areas
+        & > img {
+            grid-area: 1 / 1 / 2 / 2;
+        }
+        & > div {
+            grid-area: 1 / 2 / 2 / 3;
+
+            align-items: flex-start;
+
+            & > p {
+                text-align: left;
+            }
+        }
+    }
+}
