--- a/elyreacts/src/components/styles/PostersList.module.scss
+++ b/elyreacts/src/components/styles/PostersList.module.scss
@@ -1,9 +1,12 @@
 @import "../../variables.scss";
 
 .postersListContainer {
-    margin: 0 auto;
+    width: 100%;
 
-    & > div { // Masonry div
+    margin: 1.5rem auto 0 auto;
+
+    & > div {
+        // Masonry div
         margin: 0 auto;
         min-width: 0;
         width: 100%;
