--- a/elyreacts/src/components/styles/Poster.module.scss
+++ b/elyreacts/src/components/styles/Poster.module.scss
@@ -100,14 +100,15 @@
 }
 
 .iconLikes {
+    display: inline-block;
+
     width: 1rem;
     height: 1rem;
 
     // Correct icon offset
-    margin-top: -0.125rem;
-    margin-bottom: 0.125rem;
+    margin: -0.1rem 0.075rem 0.1rem -0.075rem;
 
-    background-image: url('../../assets/images/heart.png');
+    background-image: url("../../assets/images/heart.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
