--- a/elyreacts/src/pages/styles/Poster.module.scss
+++ b/elyreacts/src/pages/styles/Poster.module.scss
@@ -231,7 +231,7 @@
             width: max-content;
 
             margin: 1.5rem 0;
-            
+
             & > * {
                 margin-left: 0;
                 margin-right: auto;
@@ -297,22 +297,21 @@
 
     margin-right: 0.5rem;
 
-    background-image: url('../../assets/images/views.png');
+    background-image: url("../../assets/images/views.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
 .iconLikes {
+    display: inline-block;
+
     width: 1rem;
     height: 1rem;
 
     // Correct icon offset
-    margin-top: 0.125rem;
-    margin-bottom: -0.125rem;
+    margin: -0.1rem 0.575rem 0.1rem -0.075rem;
 
-    margin-right: 0.5rem;
-
-    background-image: url('../../assets/images/heart.png');
+    background-image: url("../../assets/images/heart.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
