style: update theme colour

--- a/elyreacts/src/variables.scss
+++ b/elyreacts/src/variables.scss
@@ -6,8 +6,8 @@ $color_grey_light: #a2a3a7;
 $color_success: #4ad45d;
 $color_fail: #d8544f;
 
-$color_indywalls_primary: #33c758;
-$color_indywalls_primary_light: #56d877;
+$color_indywalls_primary: #5e3fd1;
+$color_indywalls_primary_light: #786ddd;
 
 $color_text: $color_black;
 $color_text_grey: $color_grey_dark;
