--- a/elyreacts/src/components/styles/PostersList.module.scss
+++ b/elyreacts/src/components/styles/PostersList.module.scss
@@ -3,7 +3,7 @@
 .postersListContainer {
     width: 100%;
 
-    margin: 1.5rem auto 0 auto;
+    margin: 0 auto;
 
     & > div {
         // Masonry div
