--- a/elyreacts/src/components/styles/LinkButton.module.scss
+++ b/elyreacts/src/components/styles/LinkButton.module.scss
@@ -2,9 +2,17 @@
 
 .linkButton {
     display: inline-block;
+
     padding: 0.75rem 1rem;
 
     background: $color_grey_dark;
+
+    font-family: "Playfair Display", serif;
+
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: 700;
+    letter-spacing: 0.15em;
 
     color: $color_white;
 
