--- a/elyreacts/src/components/styles/Poster.module.scss
+++ b/elyreacts/src/components/styles/Poster.module.scss
@@ -2,17 +2,10 @@
 
 .container {
     display: grid;
-    grid-template-rows: repeat(2, minmax(min-content, max-content));
+    grid-template-rows: auto max-content;
 
-    // todo: fix max-width and height defs for variable poster sizes
-    // match widths, not heights
     width: 100%;
-
-    // &:hover .previewContainer {
-    //     & > a > img {
-    //         filter: brightness(75%);
-    //     }
-    // }
+    min-width: 16rem;
 }
 
 .previewContainer {
@@ -24,6 +17,7 @@
         display: inline-block;
         width: 100%;
         height: 100%;
+
         margin: 0;
         padding: 0;
     }
@@ -31,24 +25,29 @@
     & > a > img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+
         margin: 0;
         padding: 0;
         border: 0;
+
+        // This makes no difference when using Masonry
+        // but it tidies up the display when using fixed heights
+        // (on the homepage for example)
+        object-fit: cover;
+
+        background: $color_grey_dark;
 
         transition: $transition_time_anim_long;
     }
 
     .buttons {
         position: absolute;
-        top: 0;
-        right: 0;
+        top: 1rem;
+        right: 1rem;
 
         display: grid;
         grid-template-rows: repeat(2, 1fr);
         grid-gap: 0.5rem;
-
-        margin: 1rem;
 
         transition: $transition_time_anim;
     }
@@ -56,7 +55,7 @@
 
 .caption {
     display: grid;
-    grid-template-columns: minmax(0, max-content) minmax(0, max-content) auto minmax(0, max-content);
+    grid-template-columns: max-content max-content auto max-content;
     grid-template-rows: repeat(2, max-content);
 
     grid-template-areas:
@@ -66,23 +65,27 @@
     width: 100%;
     box-sizing: border-box;
 
-    padding: 1em 0.5rem;
+    margin: 1em 0;
 
     & > h3 {
         grid-area: title;
         text-transform: uppercase;
+
+        max-width: max-content;
+
+        margin-right: 0.25rem;
     }
     & > small {
         grid-area: author;
 
-        margin-top: 0.5em;
+        margin-top: 0.25rem;
     }
     & > .authorImageContainer {
         grid-area: authorImage;
         display: flex;
         align-items: center;
 
-        margin-right: 0.5em;
+        margin-right: 0.5rem;
 
         & > img {
             border-radius: 50%;
@@ -111,7 +114,7 @@
         grid-area: price;
         align-self: center;
 
-        margin-left: 0.5rem;
+        text-align: right;
     }
 }
 
