--- a/elyreacts/src/components/styles/CartItem.module.scss
+++ b/elyreacts/src/components/styles/CartItem.module.scss
@@ -33,7 +33,7 @@
 
             &.priceSingle {
                 font-size: 0.75rem;
-                color: $color_grey_dark;
+                color: $color_grey;
             }
         }
 
