--- a/elyreacts/src/variables.scss
+++ b/elyreacts/src/variables.scss
@@ -1,18 +1,23 @@
-$color_white: #fafafa;
+$color_white: #e4e3e9;
 $color_black: #1a1d22;
-$color_grey_dark: #606468;
-$color_grey_dark_light: #7e7f80;
-$color_grey_light: #a2a3a7;
-$color_success: #4ad45d;
-$color_fail: #d8544f;
+$color_black_dark: #16171a;
+$color_grey: #8b8f94;
+$color_grey_dark: #7a828b;
+$color_grey_light: #cad1e6;
+$color_green: #5edb6e;
+$color_red: #da5752;
 
-$color_indywalls_primary: #5e3fd1;
-$color_indywalls_primary_light: #786ddd;
+$color_brand_primary: #876ee0;
+$color_brand_primary_light: #8b8adb;
 
-$color_text: $color_black;
-$color_text_grey: $color_grey_dark;
-$color_link: $color_indywalls_primary;
-$color_link_hover: $color_grey_dark;
+$color_text: $color_white;
+$color_text_alt: $color_grey;
+$color_link: $color_brand_primary;
+$color_link_hover: $color_brand_primary_light;
+$color_background: $color_black;
+$color_background_alt: $color_black_dark;
+$color_success: $color_green;
+$color_fail: $color_red;
 
 $transition_time_link: 0.14s ease-in-out;
 $transition_time_anim: 0.22s ease-in-out;
@@ -24,5 +29,6 @@ $media_width_retina: 1440px;
 
 $max-width_content: 1280px;
 @media only screen and (max-width: $media_width_retina) {
+    // todo: Test/convert to rem
     $max-width_content: 1440px;
 }
