fix: shadow colours on Home featured artists

--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -108,7 +108,7 @@ em {
     font-style: italic;
 }
 
-img {
+a > img {
     filter: brightness(1);
     transition: $transition_time_anim_long;
 
@@ -409,7 +409,7 @@ section {
                 border-radius: 50%;
                 border: 0.125rem solid $color_brand_primary;
 
-                box-shadow: 0 6px 10px rgba(0, 0, 0, 0.25);
+                box-shadow: 0 2px 4px rgba(255, 255, 255, 0.125);
 
                 transition: $transition_time_anim_long;
 
