style: update Poster caption colours

--- a/elyreacts/src/pages/styles/Poster.module.scss
+++ b/elyreacts/src/pages/styles/Poster.module.scss
@@ -277,6 +277,8 @@
 
         & > strong {
             margin-top: 0.25rem;
+
+            color: $color_text_alt;
         }
     }
     & > strong.price {
