--- a/elyreacts/src/components/styles/Poster.module.scss
+++ b/elyreacts/src/components/styles/Poster.module.scss
@@ -108,6 +108,8 @@
 
         & > strong {
             margin-top: 0.25rem;
+
+            color: $color_text_alt;
         }
     }
     & > strong.price {
