--- a/elyreacts/src/components/styles/OrderItem.module.scss
+++ b/elyreacts/src/components/styles/OrderItem.module.scss
@@ -6,6 +6,8 @@
     grid-template-rows: repeat(5, max-content);
     grid-gap: 0.5rem;
 
+    width: 100%;
+
     margin: 1.25rem 0;
 
     p {
@@ -19,14 +21,18 @@
     & > a.imageContainer {
         grid-area: auto;
 
-        // height: 100%;
+        height: 100%;
+        min-height: 16rem;
         width: 100%;
 
-        & > img {
+        & > div {
             height: 100%;
-            max-width: 100%;
+            width: 100%;
 
-            object-fit: cover;
+            margin: 0 auto;
+
+            background-size: cover;
+            background-position: center;
         }
     }
 
@@ -59,7 +65,7 @@
 
 @media only screen and (min-width: $media_width_tablet) {
     .container {
-        grid-template-columns: minmax(min-content, 1fr) minmax(max-content, 2fr);
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(5, max-content);
 
         & > a.imageContainer {
