--- a/elyreacts/src/pages/styles/Poster.module.scss
+++ b/elyreacts/src/pages/styles/Poster.module.scss
@@ -15,8 +15,17 @@
     & > div.imageContainer {
         position: relative;
 
-        & > img {
-            width: 100%;
+        width: 100%;
+        height: 100%;
+
+        & > div.image {
+            min-height: 16rem;
+            max-height: 80vh;
+            height: 100%;
+            width: auto;
+
+            background-size: contain;
+            background-position: center;
         }
 
         .buttons {
@@ -179,5 +188,9 @@
     .container {
         grid-template-rows: 1fr;
         grid-template-columns: repeat(2, 1fr);
+
+        & > div.imageContainer > div.image {
+            background-position: right;
+        }
     }
 }
